spectra/tests/ui/fail_schema_missing_table.stderr
error: missing `table:`
 --> tests/ui/fail_schema_missing_table.rs:4:5
  |
4 |     BadEvent {
  |     ^^^^^^^^
